--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,12 @@ authors = [
 package-mode = false
 
 [tool.poetry.dependencies]
-python = ">=3.13"
+python = ">=3.13, <4.0"
 fastapi = "^0.115.8"
 uvicorn = {extras = ["standard"], version = "^0.34.0"}
+pydantic-settings = "^2.8.1"
+motor = "^3.7.0"
+motor-types = "^1.0.0b4"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.9.7"
